--- a/vertigo-bot-designer/src/main/java/io/vertigo/chatbot/designer/analytics/multilingual/AnalyticsMultilingualResources.properties
+++ b/vertigo-bot-designer/src/main/java/io/vertigo/chatbot/designer/analytics/multilingual/AnalyticsMultilingualResources.properties
@@ -1,4 +1,6 @@
 DELETED_BOT = Deleted bot
 SESSIONS_FILENAME = export_sessions_
 UNKNOWN_MESSAGES_FILENAME = export_unknown_messages_
+REQUEST_FILENAME = export_requests_
+USER_ACTIONS_FILENAME = export_user_actions_
 MANDATORY_TYPE_EXPORT_ANALYTICS = Please select a type export analytics
