--- a/vertigo-bot-designer/src/main/javagen/io/vertigo/chatbot/designer/domain/analytics/DtResources.properties
+++ b/vertigo-bot-designer/src/main/javagen/io/vertigo/chatbot/designer/domain/analytics/DtResources.properties
@@ -3,6 +3,12 @@
 # Resources du module io.vertigo.chatbot.designer.domain.analytics;
 ################################################################################");
 
+fldRequestExport$date = Date
+fldRequestExport$recognized = Number of recognized
+fldRequestExport$unrecognized = Number of unrecognized
+
+################################################################################");
+
 fldSentenseDetail$messageId = Rasa message ID
 fldSentenseDetail$date = Date
 fldSentenseDetail$text = User text
@@ -49,6 +55,11 @@ fldUnknownSentenseExport$dateTraining = Date training
 fldUnknownSentenseExport$confidence = Confidence
 fldUnknownSentenseExport$botName = Bot name
 fldUnknownSentenseExport$creationBot = Date bot creation
+
+################################################################################");
+
+fldUserActionsExport$date = Date
+fldUserActionsExport$count = Count
 
 ################################################################################");
 
